--- a/_config.yml
+++ b/_config.yml
@@ -35,5 +35,5 @@ kramdown:
   hard_wrap: false
 future: true
 jailed: false
-theme: jekyll-theme-primer
+theme: jekyll-theme-architect
 gfm_quirks: paragraph_end
