Revert "Set theme jekyll-theme-architect"
This reverts commit 5a12926f3c03c9a1ea331c46c0870ea9676e8d97.

--- a/_config.yml
+++ b/_config.yml
@@ -35,5 +35,5 @@ kramdown:
   hard_wrap: false
 future: true
 jailed: false
-theme: jekyll-theme-architect
+theme: jekyll-theme-primer
 gfm_quirks: paragraph_end
