Figured how to do it, need language support

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,4 +2,4 @@
 - name: Today I Learned
   link: /
 - name: About
-  link: /cv-resume/master/cv_slamontagne_en.md
+  link: /cv-resume/cv_slamontagne_en.html
