--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,5 @@
 ---
-- name: Today I Learned
+- name: Personal Notes
   link: /
-- name: About
+- name: About me
   link: /cv-resume/cv_slamontagne_en.html
